@@ -13,7 +13,7 @@ namespace GameEngine.Graphics
     class Screen
     {
         int width, height;
-        int xOffset, yOffset;
+        float xOffset, yOffset;
         int drawWidth = 480;
         int drawHeightAbs = 288;
         static Rect sprite_base = new Rect(0, 0, 32, 32);
@@ -42,9 +42,18 @@ namespace GameEngine.Graphics
         {
             if (cds == null) return;
             //Boundary check
-            if (0 > (xPos - xOffset + spriteSize) || drawWidth < (xPos - xOffset - spriteSize) || -drawHeightAbs > (yPos - yOffset) || drawHeightAbs < (yPos - yOffset)) return;
+            if (0 > (xPos - xOffset + spriteSize) || drawWidth < (xPos - xOffset - spriteSize) || -drawHeightAbs > (yPos - yOffset + spriteSize) || drawHeightAbs < (yPos - yOffset)) return;
             //Draw
             cds.DrawImage(sprite, xPos - xOffset, yPos - yOffset, sprite_base, opacity, CanvasImageInterpolation.NearestNeighbor);
+        }
+
+        public void RenderEntity(Vector2 pos, int spriteSize, CanvasBitmap sprite, float opacity = 1.0f)
+        {
+            if (cds == null) return;
+            //Boundary check
+            if (0 > (pos.X - xOffset + spriteSize) || drawWidth < (pos.X - xOffset - spriteSize) || -drawHeightAbs > (pos.Y - yOffset + spriteSize) || drawHeightAbs < (pos.Y - yOffset)) return;
+            //Draw
+            cds.DrawImage(sprite, pos.X - xOffset - spriteSize / 2, pos.Y - yOffset, sprite_base, opacity, CanvasImageInterpolation.NearestNeighbor);
         }
         public void RenderRectangleSpecialBounds(float xPos, float yPos, int spriteSize, CanvasBitmap sprite, float opacity = 1.0f)
         {
@@ -89,6 +98,12 @@ namespace GameEngine.Graphics
         {
             this.xOffset = xOffset;
             this.yOffset = yOffset;
+        }
+
+        public void SetOffset(Vector2 offset)
+        {
+            xOffset = offset.X;
+            yOffset = offset.Y;
         }
 
         public Vector2 GetOffset()
